--- a/FA-6_Sipe.html
+++ b/FA-6_Sipe.html
@@ -59,7 +59,7 @@
 
     <script>
         function changeDivBackground() {
-            document.getElementById('div1').style.backgroundColor = 'yellow';
+            document.getElementById('div1').style.backgroundColor = 'green';
             document.getElementById('div1').style.color = 'black';
         }
 
